spell check jewel

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="jumbotron">
         <h1>Welcome to Libjuania Kvorsk</h1>
-        <p class="bg-info">The Jewell of Melnov</p>
+        <p class="bg-info">The Jewel of Melnov</p>
       </div>
     <img src="img/skyline.png" alt="the skyline of Lijuania Kvorsk">
     <div class="card">
